[package]
name = "sea_orm_exports_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea_orm_exports = { path = "../" }
tokio = { version = "1", features = ["full"] }
[dependencies.sea-orm]
version = "0.12.4"
features = [
    "macros",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "sqlx-sqlite",
    "mock",
]
